--- a/services.html
+++ b/services.html
@@ -49,43 +49,50 @@
 </div>
 		
 <div class="container-services">
-	<div class="section-tabs">
-			<div class="tabs">
-				<div class="tabs-links">
-					<div class="tabs-link tabs-link-selected" data-tab="1">Pre-Construction</div>
-					<div class="tabs-link" data-tab="2">Construction</div>
-					<div class="tabs-link" data-tab="3">Design Build</div>
-					<div class="tabs-link" data-tab="4">Sustainability</div>
-				</div>
+	<div class="section-tabss">
+		<div class="tabs">
+			<div class="tabs-links">
+				<div class="tabs-link tabs-link-selected" data-tab="1">Pre-Construction</div>
+				<div class="tabs-link" data-tab="2">Construction</div>
+				<div class="tabs-link" data-tab="3">Design Build</div>
+				<div class="tabs-link" data-tab="4">Sustainability</div>
 			</div>
 		</div>
-
-
-
-	<div class="tabs-items">
-		<div class="tabs-item tabs-item-selected" data-tab="1">
-			<div class="content">
-				<h2>Pre-Construction</h2>
-				<p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</br></br>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.</p>
-			</div>
-			</div>
-
-			<img class="img" img src="img/services/services-tab-pre-construction-img.png">
 	</div>
-
-
-
-	<div class="tabs-items">
-		<div class="tabs-item tabs-item-selected" data-tab="2">
-			<div class="content">
-				<h2>Construction</h2>
-				<p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</br></br>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.</p>
-			</div>
-			</div>
-
-			<img class="img" img src="img/services/services-tab-construction-img.png">
-
 </div>
+
+
+
+	<div class="container-services">
+		<div class="tabs-items">
+			<div class="tabs-item tabs-item-selected" data-tab="1">
+				<div class="content">
+					<h2>Pre-Construction</h2>
+					<p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</br></br>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.</p>
+				</div>
+	
+				<img class="img" img src="img/services/services-tab-pre-construction-img.png">
+				</div>
+		</div>
+	</div>
+	
+
+
+
+	<div class="container-services">
+		<div class="tabs-items">
+			<div class="tabs-item tabs-item-selected" data-tab="2">
+				<div class="content">
+					<h2>Construction</h2>
+					<p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</br></br>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.</p>
+				</div>
+	
+				<img class="img" img src="img/services/services-tab-construction-img.png">
+				</div>
+	
+		</div>
+	</div>
+	
 
 <div class="container-services">
 		<div class="tabs-items">
@@ -94,11 +101,11 @@
 					<h2>Design Build</h2>
 					<p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</br></br>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.</p>
 				</div>
-				</div>
 	
 				<img class="img" img src="img/services/services-tab-design-build-img.png">
+				</div>
 		</div>
-	</div>
+</div>
 
 <div class="container-services">
 		<div class="tabs-items">
@@ -107,48 +114,48 @@
 					<h2>Sustainability</h2>
 					<p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</br></br>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.</p>
 				</div>
-				</div>
 	
 				<img class="img" img src="img/services/services-tab-sustainability-img.png">
+				</div>
 		</div>
 </div> -->
 
 
 <footer>
 	<div class="contact">
-			<div class="search-bar"> 
-				<h3>Interested in starting a project?<br>Let's talk:</h3>
+		<div class="search-bar"> 
+			<h3>Interested in starting a project?<br>Let's talk:</h3>
 
-				<div class="form">
-					<input class="form-input" type="text" placeholder="Enter email">
-				</div>
-				<p>We'll never share your email with anyone else.</p>
+			<div class="form">
+				<input class="form-input" type="text" placeholder="Enter email">
 			</div>
-
-			<div class="state-info">
-				<h3>New York</h3>
-				<h4>123 Lane</h4>
-				<h4>Suite 100</h4>
-				<h4>Albany, NY 12345</h4>
-				<h4>202 555 0144</h4>
-			</div>
-
-			<div class="state-info">
-				<h3>Florida</h3>
-				<h4>Ocean Drive</h4>
-				<h4>Suite 201</h4>
-				<h4>Orlando, FL 22345</h4>
-				<h4>502 555 0144</h4>
-			</div>
-
-			<div class="state-info">
-				<h3>California</h3>
-				<h4>Mountain Street</h4>
-				<h4>Suite 105</h4>
-				<h4>San Diego, CA 22345</h4>
-				<h4>702 555 0144</h4>
-			</div>
+			<p>We'll never share your email with anyone else.</p>
 		</div>
+
+		<div class="state-info">
+			<h3>New York</h3>
+			<h4>123 Lane</h4>
+			<h4>Suite 100</h4>
+			<h4>Albany, NY 12345</h4>
+			<h4>202 555 0144</h4>
+		</div>
+
+		<div class="state-info">
+			<h3>Florida</h3>
+			<h4>Ocean Drive</h4>
+			<h4>Suite 201</h4>
+			<h4>Orlando, FL 22345</h4>
+			<h4>502 555 0144</h4>
+		</div>
+
+		<div class="state-info">
+			<h3>California</h3>
+			<h4>Mountain Street</h4>
+			<h4>Suite 105</h4>
+			<h4>San Diego, CA 22345</h4>
+			<h4>702 555 0144</h4>
+		</div>
+	</div>
 
 	<div class="copyright">
 	<p >Copyright 2018 Smith and Jones</p>
